# ctypes-tutorial

./: .gitignore  makefile  pyproject.toml
c_libs/: arrays.c  hello_world.c  pointers.c  strings.c  structs.c
src/: arrays.py  pointers.py  strings.py  structs.py
src/functions/: argtypes.py  hello_world.py
tests/: test_arrays.py  test_functions.py  test_pointers.py  test_strings.py  test_structs.py
