[tool.poetry]
name = "ctypes"
version = "0.1.0"
description = "Ctypes tutorial"
authors = ["Salvador Ferradás <sftpo@pm.me>"]
repository = "https://github.com/salvaft/python-monorepo-starter"
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
exclude = ["clibs/"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
mypy = "^1.0.0"
pylint = "^3.0.0"


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''(
    /(
        \.git/|
        c_libs/
    )|
    ( 
        ^\..*\.sw[op]$|
        ~$
    )
)'''


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
